<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MisGastosDiarios</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nuevo">Nuevo</string>
    <string name="reportes">Reportes</string>
    <string name="title_activity_reporte">Reporte</string>
    <string name="seleccione_mes">Seleccione Mes</string>
    <string name="seleccione_anio">Seleccione Año</string>
    <string name="categoria">Categoria</string>
    <string name="importe">Importe</string>
    <string name="porcentaje">Porcentaje</string>
    <string name="title_activity_gastos">Gastos</string>
    <string name="administrar">Administrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="actualizar">Actualizar</string>
    <string name="title_activity_categoria">Categorias</string>
    <string name="volver">Volver</string>
    <string name="administrar_reducido">Admin</string>
    <string name="descripcion">Descripcion</string>
    <string name="title_activity_abmcategoria">ABM Categoria</string>
    <string name="borrar">Borrar</string>
    <string name="exportar">Exportar</string>

</resources>
