<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyabmcategoria"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    tools:context="ar.edu.ort.t5.grp1.misgastosdiarios.ABMCategoriaActivity" >

    <EditText
        android:id="@+id/etABMCategoriaDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descripcion" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom" >

        <Button
            android:id="@+id/btnABMCategoriaActivityAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnABMCategoriaActivityAceptarOnClick"
            android:text="@string/aceptar" />

        <Button
            android:id="@+id/btnABMCategoriaActivityCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnABMCategoriaActivityCancelarOnClick"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/btnABMCategoriaActivityBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnABMCategoriaActivityBorrarOnClick"
            android:text="@string/borrar" />

    </LinearLayout>

</LinearLayout>
