<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyMain"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:onClick="btnMainActivityNuevoGastoOnClick"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ar.edu.ort.t5.grp1.misgastosdiarios.MainActivity" >

    <ListView
        android:id="@+id/lvGastos"
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:layout_weight="0.70" >
    </ListView>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnMainActivityNuevoGasto"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:onClick="btnMainActivityNuevoGastoOnClick"
            android:text="@string/nuevo" />

        <Button
            android:id="@+id/btnMainActivityReportesGastos"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:onClick="btnMainActivityReportesGastosOnClick"
            android:text="@string/reportes" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical" />

        <Button
            android:id="@+id/btnMainActivityExportar"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_weight="1"
            android:onClick="btnMainActivityExportarOnClick"
            android:text="@string/exportar" />

    </LinearLayout>

</LinearLayout>